# raytracing_rs

./: README.md
001_rust_ray_tracing/: README.md
001_rust_ray_tracing/001_day1/ray_traicing_one_weekend/: Cargo.toml
001_rust_ray_tracing/001_day1/ray_traicing_one_weekend/src/: color.rs  main.rs  vec3.rs
001_rust_ray_tracing/a01_raytracing/: Cargo.toml  README.md
001_rust_ray_tracing/a01_raytracing/src/: main.rs
001_rust_ray_tracing/z01_rayon_raytracing/: Cargo.toml  README.md
001_rust_ray_tracing/z01_rayon_raytracing/src/: main.rs
002_Cpp_ray_tracing/: README.md  justfile
002_Cpp_ray_tracing/a01_hello_ppm/src/: main.cpp
002_Cpp_ray_tracing/a02_simple_ppm/: .gitignore  image.ppm
002_Cpp_ray_tracing/a02_simple_ppm/src/: main.cpp
002_Cpp_ray_tracing/a03_simple_ppm_c26ver/: CMakeLists.txt
002_Cpp_ray_tracing/a03_simple_ppm_c26ver/src/: main.cpp
003_Zig_ray_tracing/: README.md
003_Zig_ray_tracing/day1/a01_day1/: README.md  build.zig  build.zig.zon
003_Zig_ray_tracing/day1/a01_day1/src/: main.zig
004_C_ray_tracing/: README.md
004_C_ray_tracing/001_sdl2_c_lang/: justfile
004_C_ray_tracing/001_sdl2_c_lang/a01_sdl2_start/: .gitignore  CMakeLists.txt
004_C_ray_tracing/001_sdl2_c_lang/a01_sdl2_start/src/: main.c
004_C_ray_tracing/001_sdl2_c_lang/a02_circle/src/: main.c
